// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Tests Should render the header with home 1`] = `
<div
  className="w-screen h-[5em] z-10 bg-white dark:bg-dark-bg page-header undefined font-serif"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5 text-primary dark:text-dark-text-fill"
        href="/"
        onClick={[Function]}
      >
        <svg
          className="w-full cursor-pointer mr-2 "
          fill="none"
          height="36"
          viewBox="0 0 59 36"
          width="59"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
          <path
            d="M13.5 18.6112H18.2324C18.6625 18.6112 19.0444 18.3362 19.1808 17.9283L20.7981 13.0919C21.1151 12.1442 22.4728 12.1962 22.7164 13.1654L27.0802 30.5328C27.3478 31.5979 28.8876 31.5157 29.0403 30.4282L32.3788 6.64882C32.5367 5.52407 34.1498 5.49149 34.353 6.60894L38.013 26.7361C38.191 27.7149 39.5338 27.8616 39.9189 26.9442L43.1601 19.2241C43.316 18.8528 43.6794 18.6112 44.0821 18.6112H48.5"
            stroke="currentColor"
            strokeWidth="5"
          />
          <circle
            cx="52.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
        </svg>
        <h1
          className="text-3xl font-bold font-lexend"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden cursor-pointer lg:flex"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            aria-current="page"
            className="text-primary"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/docs/getting-started"
            onClick={[Function]}
          >
            Docs
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex w-2/3 justify-end "
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <a
        href="/login/org"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined font-serif "
          disabled={false}
          type="button"
        >
           
          Sign In
           
        </button>
      </a>
      <a
        href="/signup/org"
        onClick={[Function]}
      >
        <button
          className="btn transparentbtn lg mr-8 font-serif "
          disabled={false}
          type="button"
        >
           
          Register an organization
           
        </button>
      </a>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="w-full p-2 mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <div
      className="flex flex-col p-2 dark:text-dark-text-fill"
    >
      <div
        className="inline-flex gap-2 items-center"
        onClick={[Function]}
      >
        <p>
          Docs
        </p>
        <span>
          ▼
        </span>
      </div>
    </div>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/login/org"
        onClick={[Function]}
      >
         
        Sign In
      </a>
    </li>
    <a
      href="/signupOrg"
      onClick={[Function]}
    >
      <button
        className="btn transparentbtn lg mr-8 font-serif "
        disabled={false}
        type="button"
      >
         
        Register an organization
         
      </button>
    </a>
  </ul>
</div>
`;

exports[`Header Tests Should render the header with no active 1`] = `
<div
  className="w-screen h-[5em] z-10 bg-white dark:bg-dark-bg page-header undefined font-serif"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5 text-primary dark:text-dark-text-fill"
        href="/"
        onClick={[Function]}
      >
        <svg
          className="w-full cursor-pointer mr-2 "
          fill="none"
          height="36"
          viewBox="0 0 59 36"
          width="59"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
          <path
            d="M13.5 18.6112H18.2324C18.6625 18.6112 19.0444 18.3362 19.1808 17.9283L20.7981 13.0919C21.1151 12.1442 22.4728 12.1962 22.7164 13.1654L27.0802 30.5328C27.3478 31.5979 28.8876 31.5157 29.0403 30.4282L32.3788 6.64882C32.5367 5.52407 34.1498 5.49149 34.353 6.60894L38.013 26.7361C38.191 27.7149 39.5338 27.8616 39.9189 26.9442L43.1601 19.2241C43.316 18.8528 43.6794 18.6112 44.0821 18.6112H48.5"
            stroke="currentColor"
            strokeWidth="5"
          />
          <circle
            cx="52.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
        </svg>
        <h1
          className="text-3xl font-bold font-lexend"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden cursor-pointer lg:flex"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/docs/getting-started"
            onClick={[Function]}
          >
            Docs
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex w-2/3 justify-end "
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <a
        href="/login/org"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined font-serif "
          disabled={false}
          type="button"
        >
           
          Sign In
           
        </button>
      </a>
      <a
        href="/signup/org"
        onClick={[Function]}
      >
        <button
          className="btn transparentbtn lg mr-8 font-serif "
          disabled={false}
          type="button"
        >
           
          Register an organization
           
        </button>
      </a>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="w-full p-2 mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <div
      className="flex flex-col p-2 dark:text-dark-text-fill"
    >
      <div
        className="inline-flex gap-2 items-center"
        onClick={[Function]}
      >
        <p>
          Docs
        </p>
        <span>
          ▼
        </span>
      </div>
    </div>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/login/org"
        onClick={[Function]}
      >
         
        Sign In
      </a>
    </li>
    <a
      href="/signupOrg"
      onClick={[Function]}
    >
      <button
        className="btn transparentbtn lg mr-8 font-serif "
        disabled={false}
        type="button"
      >
         
        Register an organization
         
      </button>
    </a>
  </ul>
</div>
`;

exports[`Header Tests Should render the header with no active 2`] = `
<div
  className="w-screen h-[5em] z-10 bg-white dark:bg-dark-bg page-header undefined font-serif"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5 text-primary dark:text-dark-text-fill"
        href="/"
        onClick={[Function]}
      >
        <svg
          className="w-full cursor-pointer mr-2 "
          fill="none"
          height="36"
          viewBox="0 0 59 36"
          width="59"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
          <path
            d="M13.5 18.6112H18.2324C18.6625 18.6112 19.0444 18.3362 19.1808 17.9283L20.7981 13.0919C21.1151 12.1442 22.4728 12.1962 22.7164 13.1654L27.0802 30.5328C27.3478 31.5979 28.8876 31.5157 29.0403 30.4282L32.3788 6.64882C32.5367 5.52407 34.1498 5.49149 34.353 6.60894L38.013 26.7361C38.191 27.7149 39.5338 27.8616 39.9189 26.9442L43.1601 19.2241C43.316 18.8528 43.6794 18.6112 44.0821 18.6112H48.5"
            stroke="currentColor"
            strokeWidth="5"
          />
          <circle
            cx="52.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
        </svg>
        <h1
          className="text-3xl font-bold font-lexend"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden cursor-pointer lg:flex"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
        </li>
         
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/docs/getting-started"
            onClick={[Function]}
          >
            Docs
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex w-2/3 justify-end "
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <a
        href="/dashboard"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined font-serif "
          disabled={false}
          type="button"
        >
           
          Dashboard
           
        </button>
      </a>
      <button
        className="btn transparentbtn lg text-red-500 font-bolf dark:text-dark-text-fill mr-8 border border-red-600 dark:border-dark-text-fill font-serif "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
         
        Logout
         
      </button>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="w-full p-2 mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
     
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <div
      className="flex flex-col p-2 dark:text-dark-text-fill"
    >
      <div
        className="inline-flex gap-2 items-center"
        onClick={[Function]}
      >
        <p>
          Docs
        </p>
        <span>
          ▼
        </span>
      </div>
    </div>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/dashboard"
        onClick={[Function]}
      >
         
        Dashboard
      </a>
    </li>
    <button
      className="btn transparentbtn lg text-red-500 font-bolf dark:text-dark-text-fill mr-8 border border-red-600 dark:border-dark-text-fill font-serif "
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Logout
    </button>
  </ul>
</div>
`;

exports[`Header Tests Should render the header with no active 3`] = `
<div
  className="w-screen h-[5em] z-10 bg-white dark:bg-dark-bg page-header undefined font-serif"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5 text-primary dark:text-dark-text-fill"
        href="/"
        onClick={[Function]}
      >
        <svg
          className="w-full cursor-pointer mr-2 "
          fill="none"
          height="36"
          viewBox="0 0 59 36"
          width="59"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
          <path
            d="M13.5 18.6112H18.2324C18.6625 18.6112 19.0444 18.3362 19.1808 17.9283L20.7981 13.0919C21.1151 12.1442 22.4728 12.1962 22.7164 13.1654L27.0802 30.5328C27.3478 31.5979 28.8876 31.5157 29.0403 30.4282L32.3788 6.64882C32.5367 5.52407 34.1498 5.49149 34.353 6.60894L38.013 26.7361C38.191 27.7149 39.5338 27.8616 39.9189 26.9442L43.1601 19.2241C43.316 18.8528 43.6794 18.6112 44.0821 18.6112H48.5"
            stroke="currentColor"
            strokeWidth="5"
          />
          <circle
            cx="52.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
        </svg>
        <h1
          className="text-3xl font-bold font-lexend"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden cursor-pointer lg:flex"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            aria-current="page"
            className="text-primary"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/docs/getting-started"
            onClick={[Function]}
          >
            Docs
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex w-2/3 justify-end "
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <a
        href="/login/org"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined font-serif "
          disabled={false}
          type="button"
        >
           
          Sign In
           
        </button>
      </a>
      <a
        href="/signup/org"
        onClick={[Function]}
      >
        <button
          className="btn transparentbtn lg mr-8 font-serif "
          disabled={false}
          type="button"
        >
           
          Register an organization
           
        </button>
      </a>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="w-full p-2 mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <div
      className="flex flex-col p-2 dark:text-dark-text-fill"
    >
      <div
        className="inline-flex gap-2 items-center"
        onClick={[Function]}
      >
        <p>
          Docs
        </p>
        <span>
          ▼
        </span>
      </div>
    </div>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/login/org"
        onClick={[Function]}
      >
         
        Sign In
      </a>
    </li>
    <a
      href="/signupOrg"
      onClick={[Function]}
    >
      <button
        className="btn transparentbtn lg mr-8 font-serif "
        disabled={false}
        type="button"
      >
         
        Register an organization
         
      </button>
    </a>
  </ul>
</div>
`;

exports[`Header Tests Should render the header with pricing active 1`] = `
<div
  className="w-screen h-[5em] z-10 bg-white dark:bg-dark-bg page-header undefined font-serif"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5 text-primary dark:text-dark-text-fill"
        href="/"
        onClick={[Function]}
      >
        <svg
          className="w-full cursor-pointer mr-2 "
          fill="none"
          height="36"
          viewBox="0 0 59 36"
          width="59"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
          <path
            d="M13.5 18.6112H18.2324C18.6625 18.6112 19.0444 18.3362 19.1808 17.9283L20.7981 13.0919C21.1151 12.1442 22.4728 12.1962 22.7164 13.1654L27.0802 30.5328C27.3478 31.5979 28.8876 31.5157 29.0403 30.4282L32.3788 6.64882C32.5367 5.52407 34.1498 5.49149 34.353 6.60894L38.013 26.7361C38.191 27.7149 39.5338 27.8616 39.9189 26.9442L43.1601 19.2241C43.316 18.8528 43.6794 18.6112 44.0821 18.6112H48.5"
            stroke="currentColor"
            strokeWidth="5"
          />
          <circle
            cx="52.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
        </svg>
        <h1
          className="text-3xl font-bold font-lexend"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden cursor-pointer lg:flex"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            aria-current="page"
            className="text-primary"
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/docs/getting-started"
            onClick={[Function]}
          >
            Docs
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex w-2/3 justify-end "
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <a
        href="/login/org"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined font-serif "
          disabled={false}
          type="button"
        >
           
          Sign In
           
        </button>
      </a>
      <a
        href="/signup/org"
        onClick={[Function]}
      >
        <button
          className="btn transparentbtn lg mr-8 font-serif "
          disabled={false}
          type="button"
        >
           
          Register an organization
           
        </button>
      </a>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="w-full p-2 mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <div
      className="flex flex-col p-2 dark:text-dark-text-fill"
    >
      <div
        className="inline-flex gap-2 items-center"
        onClick={[Function]}
      >
        <p>
          Docs
        </p>
        <span>
          ▼
        </span>
      </div>
    </div>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/login/org"
        onClick={[Function]}
      >
         
        Sign In
      </a>
    </li>
    <a
      href="/signupOrg"
      onClick={[Function]}
    >
      <button
        className="btn transparentbtn lg mr-8 font-serif "
        disabled={false}
        type="button"
      >
         
        Register an organization
         
      </button>
    </a>
  </ul>
</div>
`;

exports[`Header Tests Should render the header with product active 1`] = `
<div
  className="w-screen h-[5em] z-10 bg-white dark:bg-dark-bg page-header undefined font-serif"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5 text-primary dark:text-dark-text-fill"
        href="/"
        onClick={[Function]}
      >
        <svg
          className="w-full cursor-pointer mr-2 "
          fill="none"
          height="36"
          viewBox="0 0 59 36"
          width="59"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
          <path
            d="M13.5 18.6112H18.2324C18.6625 18.6112 19.0444 18.3362 19.1808 17.9283L20.7981 13.0919C21.1151 12.1442 22.4728 12.1962 22.7164 13.1654L27.0802 30.5328C27.3478 31.5979 28.8876 31.5157 29.0403 30.4282L32.3788 6.64882C32.5367 5.52407 34.1498 5.49149 34.353 6.60894L38.013 26.7361C38.191 27.7149 39.5338 27.8616 39.9189 26.9442L43.1601 19.2241C43.316 18.8528 43.6794 18.6112 44.0821 18.6112H48.5"
            stroke="currentColor"
            strokeWidth="5"
          />
          <circle
            cx="52.5"
            cy="18.5"
            r="5"
            stroke="currentColor"
            strokeWidth="2"
          />
        </svg>
        <h1
          className="text-3xl font-bold font-lexend"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden cursor-pointer lg:flex"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/docs/getting-started"
            onClick={[Function]}
          >
            Docs
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex w-2/3 justify-end "
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <a
        href="/login/org"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined font-serif "
          disabled={false}
          type="button"
        >
           
          Sign In
           
        </button>
      </a>
      <a
        href="/signup/org"
        onClick={[Function]}
      >
        <button
          className="btn transparentbtn lg mr-8 font-serif "
          disabled={false}
          type="button"
        >
           
          Register an organization
           
        </button>
      </a>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="min-w-fit px-4 cursor-pointer font-serif"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8 "
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="w-full p-2 mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="w-full p-2 dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <div
      className="flex flex-col p-2 dark:text-dark-text-fill"
    >
      <div
        className="inline-flex gap-2 items-center"
        onClick={[Function]}
      >
        <p>
          Docs
        </p>
        <span>
          ▼
        </span>
      </div>
    </div>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/login/org"
        onClick={[Function]}
      >
         
        Sign In
      </a>
    </li>
    <a
      href="/signupOrg"
      onClick={[Function]}
    >
      <button
        className="btn transparentbtn lg mr-8 font-serif "
        disabled={false}
        type="button"
      >
         
        Register an organization
         
      </button>
    </a>
  </ul>
</div>
`;
